# has

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json
backend/: .env.example  .gitignore  Dockerfile  cf-requirements.txt  docker-compose.supabase.yml  docker-compose.yml  pyproject.toml  wrangler.toml
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  auth.py  challenges.py  events.py  teams.py
backend/app/core/: config.py  database.py  rewards.py  security.py
backend/app/models/: audit.py  challenge.py  event.py  team.py  user.py
backend/app/schemas/: challenge.py  event.py  team.py  user.py
backend/migrations/: env.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  wrangler.toml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/event/: ChallengeCard.tsx  EventCard.tsx  Leaderboard.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/team/: CreateTeamModal.tsx  JoinRequestCard.tsx  TeamCard.tsx  index.ts
frontend/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Loading.tsx  Modal.tsx  index.ts
frontend/src/lib/: api.ts  store.ts  types.ts  utils.ts
frontend/src/pages/: AdminEventPage.tsx  AdminPage.tsx  AuthCallbackPage.tsx  DashboardPage.tsx  EventDetailPage.tsx  EventsPage.tsx  LoginPage.tsx  ProfilePage.tsx  TeamPage.tsx  TeamRankingsPage.tsx  index.ts
